# logy-desk-backend

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .windsurfrules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  MANIFEST.in  README.md  alembic.ini  alembic.ini.bak  check_db.py  check_schema.py  check_tables.py  create_initial_migration.py  docker-compose.yml  init_db.py  minimal_test.py  pyproject.toml  requirements-test.txt  requirements.txt  run_celery_worker.sh  setup.cfg  setup.py  system_prompt.md  test_agent_settings.py  test_app.py  test_document.txt  test_main.py  test_upload.py  test_with_model_info.py
.gemini/docs/: taskPlan.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml  main.yml
.windsurf/docs/: API.md
alembic/: env.py
alembic/versions/: 2ef7501b8f3c_update_document_table_and_add_document_.py  6e4830d17465_add_default_system_user.py  6fbd90d378bc_update_agent_type_enum_values.py  8a132099c50f_add_is_active_to_agents.py  b3c64bfe60e1_update_models_to_use_timezone_aware_.py  cba74312cd02_initial_migration_with_consolidated_.py  d3f92ea9645e_update_models_to_use_timezone_aware_.py  ea811df5372c_fix_agent_type_enum_case_sensitivity.py  f1c008e14843_add_chunk_count_and_error_message_to_.py
app/: _version.py  main.py
app/api/: endpoints.py  router.py
app/api/endpoints/: agents.py  chat.py  chat_sessions.py  documents.py
app/api/endpoints/auth/: __init__.py  endpoints.py
app/core/: celery_utils.py  config.py  dev_utils.py  logging_config.py  password_utils.py  security.py
app/crud/: __init__.py  base.py  crud_agent.py  crud_chat.py  crud_document.py  crud_user.py
app/db/: base.py  database.py  session.py
app/models/: __init__.py  base.py  db_models.py  document_schemas.py  models.py  schemas.py
app/schemas/: __init__.py  agent.py  chat.py  document.py  token.py  user.py
app/services/: agent_service.py  llm_client.py  rag_service.py
app/tasks/: document_tasks.py
migrations/: env.py
migrations/versions/: 2025_07_10_0812_increase_document_columns_length.py
scripts/: check_and_create_db.py  check_db.py  check_default_user.py  check_schema.py  init_db.py  register_test_user.py  reset_alembic.py  reset_and_migrate.py  reset_db.py  setup_db.py  test_agents.py  test_auth.py  test_document.txt  test_documents.py
tests/: conftest.py  minimal_test.py  test_api.py  test_db_minimal.py  test_docs_minimal.py  test_document_crud.py  test_document_endpoints.py  test_documents.py  test_documents_async.py  test_documents_endpoint.py  test_documents_new.py  test_documents_simple.py  test_documents_step1.py  test_documents_step2.py  test_documents_step3.py  test_documents_sync.py  test_minimal.py  test_utils.py
venv_logydesk/: pyvenv.cfg
