[metadata]
description-file = README.md
license_file = LICENSE

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
python_classes = Test*
addopts = -v --cov=app --cov-report=term-missing --cov-report=xml
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
    ignore::UserWarning
    ignore::FutureWarning

[coverage:run]
source = app
omit =
    app/tests/*
    app/__main__.py
    app/main.py

[coverage:report]
show_missing = true
skip_covered = true
fail_under = 80
exclude_lines =
    pragma: no cover
    def __repr__
    if self\.\w+:
    raise NotImplementedError
    raise ImportError
    pass
    @abstractmethod
    @property
    @classmethod
    @staticmethod
    def __init__
    def __[a-z]+
    raise$

[flake8]
max-line-length = 88
extend-ignore = E203, W503
per-file-ignores =
    # Allow * imports in __init__.py
    __init__.py: F401
    # Ignore line length in tests
    tests/*.py: E501
    # Ignore unused imports in migrations
    alembic/versions/*.py: F401, F403

exclude =
    .git
    __pycache__
    .venv
    venv
    .mypy_cache
    .pytest_cache
    build
    dist
    .eggs
    *.egg-info
    .tox
    .env
    .vscode
    .idea
    .pytest_cache
    .mypy_cache

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
check_untyped_defs = True
no_implicit_optional = True
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
show_error_context = True
show_column_numbers = True

[[tool.mypy.overrides]]
module = ["sqlalchemy.*"]
ignore_missing_imports = True

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = True

[isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
known_first_party = ["app"]
known_third_party = [
    "fastapi", "pydantic", "sqlalchemy", "alembic", "pytest",
    "uvicorn", "httpx", "passlib", "jose", "python_dotenv"
]
